fix(tabs): handle tab scrolling offscreen on mobile

--- a/src/components/tabs/styles/CdrTabs.scss
+++ b/src/components/tabs/styles/CdrTabs.scss
@@ -24,6 +24,7 @@
   display: flex;
   flex-flow: column;
   height: 500px;
+  overflow-x: hidden;
 
   // https://davidwalsh.name/osx-overflow
   ::-webkit-scrollbar {
